/*
 * Copyright (c) 2020-2021 Skymind Education Group Sdn. Bhd.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.

 * SPDX-License-Identifier: Apache-2.0
 */

package global.skymind.solution.intermediate.collections;
// Java program to demonstrate the working of ArrayList in Java

import java.io.*;
import java.util.*;

public class Ex7_ArrayList {
    public static void main(String[] args)
    {
        //Size of the ArrayList
        int n = 5;

        //Declaring the ArrayList with initial size n
        ArrayList<Integer> arrli = new ArrayList<Integer>(n);

        //Appending new elements at the end of the list
        for (int i = 1; i <= n; i++)
            arrli.add(i);

        //Printing elements
        System.out.println(arrli);

        //Remove element at index 3
        arrli.remove(4);

        //Displaying the ArrayList after deletion
        System.out.println(arrli);

        //Printing elements one by one
        for (int i = 0; i < arrli.size(); i++)
            System.out.print(arrli.get(i) + " ");
    }
}